--- a/arch/arm/configs/keiran_zeus_defconfig
+++ b/arch/arm/configs/keiran_zeus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.32.59
+# Linux kernel version: 2.6.32.9
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -31,7 +31,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-KeiCS"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-Darkforest"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
