--- a/.config
+++ b/.config
@@ -136,6 +136,14 @@ CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_FREEZER=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_PERCENTAGE=25
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_LZO=y
+# CONFIG_ZRAM_SNAPPY is not set
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 
 #
 # System Type
