--- a/arch/arm/configs/keiran_zeus_defconfig
+++ b/arch/arm/configs/keiran_zeus_defconfig
@@ -31,7 +31,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-Darkforest"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-KeiCS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -136,6 +136,14 @@ CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_FREEZER=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_PERCENTAGE=25
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_LZO=y
+# CONFIG_ZRAM_SNAPPY is not set
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 
 #
 # System Type
@@ -2498,6 +2506,8 @@ CONFIG_CRC32=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_TEXTSEARCH=y
