--- a/arch/arm/configs/keiran_zeus_defconfig
+++ b/arch/arm/configs/keiran_zeus_defconfig
@@ -31,7 +31,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-DarkForest"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-kEiRaN"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -122,9 +122,9 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_AS=y
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_AS is not set
+# CONFIG_IOSCHED_DEADLINE is not set
+# CONFIG_IOSCHED_CFQ is not set
 # CONFIG_DEFAULT_AS is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -446,14 +446,14 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -464,7 +464,7 @@ CONFIG_CPU_FREQ_GOV_SMARTASS=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEZ=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 # CONFIG_CPU_IDLE is not set
 CONFIG_CPU_FREQ_MSM=y
 
