--- a/arch/arm/configs/keiran_zeus_defconfig
+++ b/arch/arm/configs/keiran_zeus_defconfig
@@ -40,6 +40,14 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_TASKSTATS is not set
 # CONFIG_AUDIT is not set
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_PERCENTAGE=25
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_LZO=y
+# CONFIG_ZRAM_SNAPPY is not set
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 
 #
 # RCU Subsystem
